RESOLVED FIXED118425
[GTK] Runtime critical warning when unloading a module that failed to load
https://bugs.webkit.org/show_bug.cgi?id=118425
Summary [GTK] Runtime critical warning when unloading a module that failed to load
Carlos Garcia Campos
Reported 2013-07-05 10:02:04 PDT
(lt-WebKitWebProcess:31468): GModule-CRITICAL **: g_module_close: assertion 'module != NULL' failed
Attachments
Patch (1.41 KB, patch)
2013-07-05 10:06 PDT, Carlos Garcia Campos
mrobinson: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 (495.43 KB, application/zip)
2013-07-06 01:59 PDT, Build Bot
no flags
Carlos Garcia Campos
Comment 1 2013-07-05 10:03:27 PDT
It's also confusing that you don't know why the module failed to load
Carlos Garcia Campos
Comment 2 2013-07-05 10:06:27 PDT
Martin Robinson
Comment 3 2013-07-05 10:14:44 PDT
Comment on attachment 206159 [details] Patch Looks good to me.
Build Bot
Comment 4 2013-07-06 01:59:45 PDT
Comment on attachment 206159 [details] Patch Attachment 206159 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/984205 New failing tests: webaudio/javascriptaudionode-downmix8-2channel-input.html
Build Bot
Comment 5 2013-07-06 01:59:46 PDT
Created attachment 206187 [details] Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Carlos Garcia Campos
Comment 6 2013-07-08 01:20:24 PDT
Note You need to log in before you can comment on or make changes to this bug.