[GTK] Runtime critical warning when unloading a module that failed to load https://bugs.webkit.org/show_bug.cgi?id=118425

Reviewed by Martin Robinson.

* Platform/gtk/ModuleGtk.cpp:
(WebKit::Module::load): Show an error message when the module
fails to load.
(WebKit::Module::unload): Check module pointer before calling
unload method.

Canonical link: https://commits.webkit.org/136430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152442 268f45cc-cd09-0410-ab3c-d52691b4dbfc